# probe

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
bench/: __init__.py  calibrate.py  clp_typed.py  diagnosis.py  grouping.py
probe/: __init__.py  changes.py  cli.py  clp.py  engine.py  gen.py  mcp_server.py  redact.py
rs/: Cargo.toml
rs/src/: clp.rs  lib.rs  redact.rs
rs/tests/: invariants.rs
