[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "probe-logs"
version = "0.1.0"
description = "Turn large log files into a short, ranked summary your AI agent can read, then let it search the full logs on demand. Runs locally, removes secrets before anything reaches a model, and costs nothing to run."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Somu Datta" }]
keywords = ["logs", "log-analysis", "log-compression", "observability", "incident-response",
            "mcp", "model-context-protocol", "ai-agents", "llm", "claude", "cursor", "sre",
            "debugging", "redaction", "privacy", "local-first"]
dependencies = []  # standard library only, no runtime dependencies

[project.urls]
Homepage = "https://github.com/somudatta06/probe"
Repository = "https://github.com/somudatta06/probe"

[project.scripts]
probe = "probe.cli:main"

[tool.setuptools.packages.find]
include = ["probe*"]
